--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -160,7 +160,7 @@
                 <i class="bi bi-linkedin"></i>
                 LinkedIn
             </a>
-            <a href="" target="_blank" class="btn-developer btn-portfolio">
+            <a href="https://vasan12sp.is-a.dev" target="_blank" class="btn-developer btn-portfolio">
                 <i class="bi bi-globe"></i>
                 Portfolio
             </a>
